@@ -131,7 +131,13 @@ static CCActionManager *_sharedManager = nil;
 
 #pragma mark ActionManager - Pause / Resume
 
+// XXX DEPRECATED. REMOVE IN 1.0
 -(void) pauseAllActionsForTarget:(id)target
+{
+	[self pauseTarget:target];
+}
+
+-(void) pauseTarget:(id)target
 {
 	tHashElement *element = NULL;
 	HASH_FIND_INT(targets, &target, element);
@@ -140,7 +146,14 @@ static CCActionManager *_sharedManager = nil;
 //	else
 //		CCLOG(@"cocos2d: pauseAllActions: Target not found");
 }
+
+// XXX DEPRECATED. REMOVE IN 1.0
 -(void) resumeAllActionsForTarget:(id)target
+{
+	[self resumeTarget:target];
+}
+
+-(void) resumeTarget:(id)target
 {
 	tHashElement *element = NULL;
 	HASH_FIND_INT(targets, &target, element);
